tests/ui/associated-inherent-types/normalization-overflow.current.stderr
error: overflow evaluating associated type `T::This`
  --> $DIR/normalization-overflow.rs:12:17
   |
LL |     type This = Self::This;
   |                 ^^^^^^^^^^

error: aborting due to 1 previous error

